--- a/geek/index.html
+++ b/geek/index.html
@@ -90,7 +90,7 @@
                 </div><!-- navbar -->
             </div><!-- navigation -->
 
-            <div id="home-banner" class="home-banner-one">
+            <div id="home-banner" class="">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-9">
@@ -106,7 +106,7 @@
                 </div><!-- container -->
             </div><!-- home-banner -->
 
-            <div id="about" class="about-section section-padding">
+            <div id="about" class="about-section section-padding bg-color">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8">
@@ -150,7 +150,7 @@
                 </div><!-- container -->
             </div><!-- about section -->
 
-            <div id="skill" class="skill-section bg-color section-padding">
+            <div id="skill" class="skill-section section-padding">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8">
@@ -248,7 +248,7 @@
                 </div><!-- container -->
             </div><!-- skill section -->
 
-            <div id="exprience" class="exprience-section section-padding">
+            <div id="exprience" class="exprience-section bg-color section-padding">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8">
@@ -318,7 +318,7 @@
                 </div><!-- container -->
             </div><!-- exprience section -->
 
-            <div id="education" class="education-section bg-color section-padding">
+            <div id="education" class="education-section section-padding">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8">
@@ -331,26 +331,18 @@
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                                 </div>
                                 <div class="education-info">
-                                    <img class="img-responsive" src="images/education/1.png" alt="Image">
-                                    <h3>Montana State University</h3>
-                                    <h5>Bachalor of Arts</h5>
-                                    <h6>1999 - 2003</h6>
+                                    <img class="img-responsive" src="images/education/boston-university-logo.svg" alt="Image">
+                                    <h3>Boston University</h3>
+                                    <h5>Boston, MA</h5>
+                                    <h6>2018 - 2022</h6>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                                 </div>
                                 <hr>
                                 <div class="education-info">
-                                    <img class="img-responsive" src="images/education/2.png" alt="Image">
-                                    <h3>Montana State University</h3>
-                                    <h5>University of Bristol</h5>
-                                    <h6>1999 - 2003</h6>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-                                </div>
-                                <hr>
-                                <div class="education-info">
-                                    <img class="img-responsive" src="images/education/3.png" alt="Image">
-                                    <h3>Cincinnati Christian University</h3>
-                                    <h5>Bachalor of Arts</h5>
-                                    <h6>1999 - 2003</h6>
+                                    <img class="img-responsive" src="images/education/paly.png" alt="Image">
+                                    <h3>Palo Alto HighSchool</h3>
+                                    <h5>Palo Alto, CA</h5>
+                                    <h6>2014 - 2018</h6>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                                 </div>
                             </div>
@@ -359,7 +351,7 @@
                 </div><!-- container -->
             </div><!-- education section -->
 
-            <div id="portfolio" class="portfolio-section section-padding">
+            <div id="portfolio" class="portfolio-section bg-color section-padding">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8">
@@ -475,7 +467,7 @@
                 </div><!-- container -->
             </div><!-- portfolio section -->
 
-            <div id="contact" class="contact-section bg-color section-padding">
+            <div id="contact" class="contact-section section-padding">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8">
@@ -572,7 +564,7 @@
 
 
 
-            <div id="profile" class="profile-section section-padding">
+            <div id="profile" class="profile-section bg-color section-padding">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8">
