--- a/geek/index.html
+++ b/geek/index.html
@@ -261,7 +261,7 @@
                             </div>
                             <div class="exprience">
                                 <div class="exprience-image">
-                                    <img class="img-responsive" src="images/exprience/1.png" alt="Image">
+                                    <img class="img-responsive" src="images/exprience/deepnorth.png" alt="Image">
                                 </div>
                                 <div class="exprience-info">
                                     <h3>Senior Graphic Designer</h3>
