--- a/geek/index.html
+++ b/geek/index.html
@@ -272,7 +272,7 @@
                             <hr>
                             <div class="exprience">
                                 <div class="exprience-image">
-                                    <img class="img-responsive" src="images/exprience/2.png" alt="Image">
+                                    <img class="img-responsive" src="images/exprience/mayfield.gif" alt="Image">
                                 </div>
                                 <div class="exprience-info">
                                     <h3>Former Graphic Designer</h3>
