--- a/geek/index.html
+++ b/geek/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Theme Region">
        	<meta name="description" content="">
 
-        <title>Geek | Personal Portfolio & Resume HTML Template.</title>
+        <title>Geek | Akash is a Geek</title>
 
 		<!-- CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
